--- a/3_abstract.tex
+++ b/3_abstract.tex
@@ -12,7 +12,7 @@
 \begin{minipage}[c]{.9\linewidth}
 \begin{quote}
 	
-{\large Los datos disponibles de la materia blanca de cerebro permiten localizar los atractores normal (homeostático), Glioma y Alzheimer en el espacio de expresión genética e identificar caminos relacionados con transiciones como la carcinogénesis o la aparición del Alzheimer. También se aprecia una trayectoria predefinida para el envejecimiento, lo cual es consistente con la hipótesis del envejecimiento programado. Adicionalmente, suposiciones razonables sobre la fortaleza relativa de los atractores permite dibujar un panorama esquemático del \textit{fitness}: diagrama de Wright. Estos sencillos diagramas reproducen relaciones conocidas entre el envejecimiento, el glioma y el Alzheimer, y plantea cuestiones interesantes como la posible conexión entre el envejecimiento programado y el glioma en este tejido. Prevemos que múltiples diagramas similares en otros tejidos podrían ser útiles en el entendimiento de la biología de enfermedades o trastornos aparentemente no relacionados, y para descubrir pistas inesperadas para su tratamiento.}
+{\large Los datos disponibles de la materia blanca de cerebro permiten localizar los atractores normal (homeostático), Glioblastoma y Alzheimer en el espacio de expresión genética e identificar caminos relacionados con transiciones como la carcinogénesis o la aparición del Alzheimer. También se aprecia una trayectoria predefinida para el envejecimiento, lo cual es consistente con la hipótesis del envejecimiento programado. Adicionalmente, suposiciones razonables sobre la fortaleza relativa de los atractores permite dibujar un panorama esquemático del \textit{fitness}: diagrama de Wright. Estos sencillos diagramas reproducen relaciones conocidas entre el envejecimiento, el glioblastoma y el Alzheimer, y plantea cuestiones interesantes como la posible conexión entre el envejecimiento programado y el glioblastoma en este tejido. Prevemos que múltiples diagramas similares en otros tejidos podrían ser útiles en el entendimiento de la biología de enfermedades o trastornos aparentemente no relacionados, y para descubrir pistas inesperadas para su tratamiento.}
 
 
 
@@ -34,7 +34,7 @@
 
 \begin{quote}
 
-{\large Available data for white matter of the brain allows to locate the normal (homeostatic), glioma and Alzheimer’s disease attractors in gene expression space and to identify paths related to transitions like carcinogenesis or Alzheimer’s disease onset. A predefined path for aging is also apparent, which is consistent with the hypothesis of programmatic aging. In addition, reasonable assumptions about the relative strengths of attractors allow to draw a schematic landscape of fitness: a Wright’s diagram. These simple diagrams reproduce known relations between aging, glioma and Alzheimer’s disease, and rise interesting questions like the possible connection between programmatic aging and glioma in this tissue. We anticipate that similar multiple diagrams in other tissues could be useful in the understanding of the biology of apparently unrelated diseases or disorders, and in the discovery of unexpected clues for their treatment.
+{\large Available data for white matter of the brain allows to locate the normal (homeostatic), glioblastoma and Alzheimer’s disease attractors in gene expression space and to identify paths related to transitions like carcinogenesis or Alzheimer’s disease onset. A predefined path for aging is also apparent, which is consistent with the hypothesis of programmatic aging. In addition, reasonable assumptions about the relative strengths of attractors allow to draw a schematic landscape of fitness: a Wright’s diagram. These simple diagrams reproduce known relations between aging, glioblastoma and Alzheimer’s disease, and rise interesting questions like the possible connection between programmatic aging and glioblastoma in this tissue. We anticipate that similar multiple diagrams in other tissues could be useful in the understanding of the biology of apparently unrelated diseases or disorders, and in the discovery of unexpected clues for their treatment.
 }
 
 
