--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -16,7 +16,7 @@ Un paradigma conocido en la biología molecular expresa que los máximos locales
 	\label{fig:wrightDiagram}
 \end{figure}
 
-Esta representación ha sido aplicada a la descripción del destino celular a lo largo de una línea de diferenciación \cite{casey2020theory}. Sin embargo, hasta donde sabemos, no hay gráficos basados en datos reales para un tejido dado que represente, al menos de forma parcial, un diagrama de Wright con más de dos máximos. En el presente trabajo, mostramos un diagrama para la materia blanca del cerebro en el cual el estado normal (N) se representa junto con el atractor glioma (GB) y el máximo relacionado con la enfermedad del Alzheimer (EA).
+Esta representación ha sido aplicada a la descripción del destino celular a lo largo de una línea de diferenciación \cite{casey2020theory}. Sin embargo, hasta donde sabemos, no hay gráficos basados en datos reales para un tejido dado que represente, al menos de forma parcial, un diagrama de Wright con más de dos máximos. En el presente trabajo, mostramos un diagrama para la materia blanca del cerebro en el cual el estado normal (N) se representa junto con el atractor glioblastoma (GB) y el máximo relacionado con la enfermedad del Alzheimer (EA).
 
 La EA se caracteriza por la pérdida progresiva de células neuronales, mientras que el GB es un tipo de cáncer cerebral que implica la proliferación descontrolada de células. Algunas investigaciones muestran que pacientes con la EA podrían tener un menor riesgo de desarrollar GB. Por ejemplo, en la referencia \cite{ou2012does} se muestra que ambas enfermedades presentan un aumento en el estrés oxidativo, en la EA, esto hace que las células neuronales sean más vulnerables a la muerte, mientras que en el GB, las células cancerosas se vuelven más resistentes. Además, se plantea que la degeneración de células que secretan acetilcolina en la EA podría tener un efecto protector contra el cáncer, ya que esta sustancia puede estimular el crecimiento de células cancerosas.
 
@@ -45,9 +45,9 @@ El trabajo presentado como tesis de diploma consta de una introducción, tres ca
 	
 	\item[$\bullet$] \textbf{Capítulo 2:} Se centra en la construcción y análisis del diagrama de tres atractores que emergen en el espacio de expresión genética. Mediante técnicas de reducción dimensional se visualizan las posiciones relativas de estos atractores y se observa cómo las muestras de tejido se desplazan de un estado a otro. Además, se introduce un panorama del fitness celular a través de un diagrama de Wright que ilustra las barreras y la fuerza relativa de cada atractor, enfatizando las diferencias en la transición de un estado a otro.
 	
-	\item[$\bullet$] \textbf{Capítulo 3:} Presenta los resultados obtenidos del análisis de los datos de expresión genética. En este capítulo se destacan, por un lado, los hallazgos cualitativos, en los que se identifican claramente los atractores asociados al estado normal, al glioma y a la enfermedad de Alzheimer, evidenciando las trayectorias y transiciones entre estos estados; y, por otro lado, se ofrece una perspectiva cuantitativa, respaldada por representaciones gráficas y análisis estadísticos, que valida la relación inversa entre el glioma y el Alzheimer y resalta el papel del envejecimiento en estas transiciones.
+	\item[$\bullet$] \textbf{Capítulo 3:} Presenta los resultados obtenidos del análisis de los datos de expresión genética. En este capítulo se destacan, por un lado, los hallazgos cualitativos, en los que se identifican claramente los atractores asociados al estado normal, al glioblastoma y a la enfermedad de Alzheimer, evidenciando las trayectorias y transiciones entre estos estados; y, por otro lado, se ofrece una perspectiva cuantitativa, respaldada por representaciones gráficas y análisis estadísticos, que valida la relación inversa entre el glioblastoma y el Alzheimer y resalta el papel del envejecimiento en estas transiciones.
 	
-	\item[$\bullet$] \textbf{Conclusiones:} Se sintetiza como el análisis de la expresión génica en la materia blanca del cerebro permite identificar tres atractores y ponen de manifiesto una relación inversa entre el desarrollo del glioma y la aparición del Alzheimer. 
+	\item[$\bullet$] \textbf{Conclusiones:} Se sintetiza como el análisis de la expresión génica en la materia blanca del cerebro permite identificar tres atractores y ponen de manifiesto una relación inversa entre el desarrollo del glioblastoma y la aparición del Alzheimer. 
 	
 	\item[$\bullet$] \textbf{Recomendaciones:} Se destaca la necesidad de realizar estudios futuros que afinen y amplíen el modelo propuesto, proponiendo la integración de técnicas analíticas más robustas y la incorporación de datos de plataforma unificada para superar las limitaciones actuales de heterogeneidad.
 	
