--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -22,7 +22,7 @@ La EA se caracteriza por la pérdida progresiva de células neuronales, mientras
 
 
 %En \cite{Driver_2012} concluyen que los sobrevivientes de cáncer tienen un riesgo 33 \% menor de desarrollar la EA en comparación con aquellos sin antecedentes de cáncer. Las personas con la EA tienen un riesgo 61 \% menor de desarrollar cáncer. En \cite{Musicco_2013} encuentran que el riesgo de cáncer en pacientes con la EA se reduce a la mitad, y el riesgo de padecer la EA en pacientes con cáncer se reduce en un 35 \%.
-Los estudios epidemiológicos señalan que aquellas personas que padecen una de estas enfermedades tiene un riesgo menor de desarrollas la otra. Concretamente, los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos sin antecedente de cáncer. Mientras que las personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer \cite{Roe_2010, Driver_2012, Musicco_2013}.
+Los estudios epidemiológicos señalan que aquellas personas que padecen una de estas enfermedades tiene un riesgo menor de desarrollar la otra. Concretamente, los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos sin antecedente de cáncer. Mientras que las personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer \cite{Roe_2010, Driver_2012, Musicco_2013}.
 %Como se reporta en  \cite{Roe_2010, Driver_2012, Musicco_2013}, los datos sugieren que los pacientes con cáncer tienen un riesgo alrededor de 31 y 35 \% menor de desarrollar la EA en comparación con aquellos sin antecedente de cáncer. Mientras que los personas que padecen la EA tienen un riesgo entre 41 y 61 \% menor de desarrollar cáncer.
 
 Esta idea de la EA y el GB como alternativas opuestas también está apoyada por un gran número experimentos de biología molecular. Por ejemplo, en la referencia \cite{Liu_2013} los autores encuentran que las vías de señalización ERK/MAPK están aumentadas en GB y disminuidas en la EA. Estas vías conectan señales extracelulares, como factores de crecimiento y citocinas, a respuestas intracelulares que regulan la proliferación celular, diferenciación y supervivencia. También muestran que las vías de señalización de la angiopoyetina están aumentadas en la EA y disminuidas en GB, estas relacionadas con la regulación de la angiogénesis y la estabilidad vascular.
@@ -36,7 +36,7 @@ A nivel genético, hay genes que varían su expresión de la misma manera en los
 
 Esta visión inusual puede ayudar a comprender las relaciones entre la EA y el GB, e identificar marcadores génicos útiles para ambos procesos. Como un bono adicional, la representación permite encontrar preguntas muy interesantes que se discutirán a continuación.
 
-El trabajo presentado como tesis de diploma consta de una introducción, tres capítulos, las conclusiones y las recomendaciones. El contenido se distribuye de la siguiente forma:
+El trabajo presentado como tesis de maestría consta de una introducción, tres capítulos, las conclusiones y las recomendaciones. El contenido se distribuye de la siguiente forma:
 
 \begin{itemize}
 	\item[$\bullet$] \textbf{Introducción:} Se presenta análisis del panorama genético y epidemiológico relacionado con la EA, el GB y el envejecimiento. Se describe la relación inversa entre la EA y el GB basada en evidencia epidemiológica y molecular. Además, se hace referencia a la idea del envejecimiento programado como factor de riesgo para ambas enfermedades.
